[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Levels/Pause.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/TitleScreenButtons.tres" type="DynamicFont" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/BebasNeue-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 36
outline_color = Color( 0.12549, 0.439216, 0.168627, 1 )
font_data = SubResource( 1 )

[node name="PauseUI" type="CanvasLayer"]
layer = 100

[node name="Pause" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseLabel" type="Label" parent="Pause"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.0
margin_top = 88.0
margin_right = 150.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 2 )
text = "Pause Menu"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -80.0
margin_right = 72.0
margin_bottom = -42.0
custom_fonts/font = ExtResource( 2 )
text = "Resume"
flat = true

[node name="QuitToMainMenu" type="Button" parent="Pause"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -186.0
margin_top = -350.0
margin_right = 186.0
margin_bottom = -312.0
custom_fonts/font = ExtResource( 2 )
text = "Quit to main menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGame" type="Button" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = 100.0
margin_right = 108.0
margin_bottom = 138.0
custom_fonts/font = ExtResource( 2 )
text = "Quit Game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Pause/Resume" to="Pause" method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause/QuitToMainMenu" to="Pause" method="_on_QuitToMainMenu_pressed"]
[connection signal="pressed" from="Pause/QuitGame" to="Pause" method="_on_QuitGame_pressed"]
